Fill tool with unified strength checked not working as with unified strength unchecked #73656

Closed
opened 2020-02-07 14:04:33 +01:00 by info@lumpapps.com · 5 comments

Blender Version
Broken: version: 2.79b, 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4

Short description of error
With unified strength unchecked, fill strength can be set to a from 0.0 - 1.0 and object is filled correctly.
With unified strength checked, the fill strength result is always the value that was used when the option was unchecked. For example when the value was 1.0 when the checkbox is ticked the strength is always 1.0 no matter what strength you choose.

Exact steps for others to reproduce the error

  • Open blend file
  • With the Cube selected go to Texture Paint mode
  • Add a base color texture to the texture slot (from the top menu)
  • Use the Fill Tool and leave Unified Strength unchecked (button next to Strength)
  • Set the color to black (0.0, 0.0, 0.0) and the brush strength on 1.0
  • Fill; cube is now black
  • Ctrl-z
  • Now check Unified Strength and set the brush strength to 0.0

Fill; cube is still black

It is always the strength has when step 5 is done

**Blender Version** Broken: version: 2.79b, 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` **Short description of error** With unified strength unchecked, fill strength can be set to a from 0.0 - 1.0 and object is filled correctly. With unified strength checked, the fill strength result is always the value that was used when the option was unchecked. For example when the value was 1.0 when the checkbox is ticked the strength is always 1.0 no matter what strength you choose. **Exact steps for others to reproduce the error** - Open blend file - With the Cube selected go to `Texture Paint` mode - Add a base color texture to the texture slot (from the top menu) - Use the `Fill Tool` and leave `Unified Strength` unchecked (button next to `Strength`) - Set the color to black (0.0, 0.0, 0.0) and the brush strength on 1.0 - Fill; cube is now black - Ctrl-z - Now check `Unified Strength` and set the brush strength to 0.0 # Fill; cube is still black It is always the strength has when step 5 is done

Added subscriber: @Ludwig

Added subscriber: @Ludwig

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 35490c3ead

This issue was referenced by 35490c3ead03d472dbcba36c85d428e81b442520
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-02-11 17:47:27 +01:00

Thanks!

Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73656
No description provided.